--- a/src/main/resources/emailverification/confirmMessageContentPattern.html
+++ b/src/main/resources/emailverification/confirmMessageContentPattern.html
@@ -2,31 +2,41 @@
 <head>
     <title>Account Verified</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .background {
+            padding: 0 100px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #1a1e1f;
+            background-image: url('https://i.pinimg.com/originals/95/53/54/955354eb474aba4edf42ee8d6d458702.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100%;
+        }
         .text_container {
-            margin-left: auto;
-            margin-right: auto;
-            align-self: center;
-            text-transform: uppercase;
-            color: black;
-            width: auto;
-            height: auto;
             background: #FFFFFF00;
+            color: black;
             padding: 10px;
             text-align: center;
-            font: bold 46px/68px "Agency FB", Sans-Serif;
-            align-content: center;
+            text-transform: uppercase;
+            font-family: "Comic Sans MS", Sans-Serif;
+            font-size: 46px;
+            font-weight: bold;
         }
-
-        .text_with_bg {
-            width: 100%;
-            height: 100%;
-            background: url('https://i.pinimg.com/originals/95/53/54/955354eb474aba4edf42ee8d6d458702.jpg') no-repeat center center;
-            display: flex;
-            position: center;
+        @media (max-width: 1024px) {
+            .text_container {
+                font-size: 38px;
+            }
         }
-
-        .background {
-            background-color: #1A1E1F;
+        @media (max-width: 425px) {
+            .text_container {
+                font-size: 28px;
+            }
         }
     </style>
 </head>
